--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="code.js" defer></script>
-    
   </head>
   <body>
     <div class="calculator">
@@ -36,7 +35,5 @@
         <button class="add operator">+</button>
       </div>
     </div>
-    
   </body>
-  
 </html>
